rerun Swagger CodeGen with new OperationIDs
