# backend/nodejs-petsitter/api/openapi.yaml
@@ -30,7 +30,7 @@ paths:
       tags:
       - Users
       summary: Register a user
-      operationId: usersPOST
+      operationId: registerUser
       requestBody:
         content:
           application/json:
@@ -51,7 +51,7 @@ paths:
       tags:
       - Users
       summary: View User
-      operationId: usersIdGET
+      operationId: getUserById
       parameters:
       - name: id
         in: path
@@ -72,7 +72,7 @@ paths:
       tags:
       - Users
       summary: Modify User
-      operationId: usersIdPUT
+      operationId: modifyUserById
       parameters:
       - name: id
         in: path
@@ -98,7 +98,7 @@ paths:
       tags:
       - Users
       summary: Delete User
-      operationId: usersIdDELETE
+      operationId: deleteUserById
       parameters:
       - name: id
         in: path
@@ -116,7 +116,7 @@ paths:
       tags:
       - Jobs
       summary: List jobs for User
-      operationId: usersIdJobsGET
+      operationId: getJobsForUser
       parameters:
       - name: id
         in: path
@@ -138,7 +138,7 @@ paths:
       tags:
       - Job Applications
       summary: List applications for a given user
-      operationId: usersIdJob_applicatiionsGET
+      operationId: getApplicationsForUser
       parameters:
       - name: id
         in: path
@@ -174,7 +174,7 @@ paths:
       tags:
       - Jobs
       summary: List all jobs
-      operationId: jobsGET
+      operationId: getAllJobs
       responses:
         "200":
           description: OK
@@ -222,7 +222,7 @@ paths:
       tags:
       - Jobs
       summary: Create a job
-      operationId: jobsPOST
+      operationId: createJob
       requestBody:
         content:
           application/json:
@@ -243,7 +243,7 @@ paths:
       tags:
       - Jobs
       summary: View Job
-      operationId: jobsIdGET
+      operationId: getJobById
       parameters:
       - name: id
         in: path
@@ -290,7 +290,7 @@ paths:
       tags:
       - Jobs
       summary: Delete Job
-      operationId: jobsIdDELETE
+      operationId: deleteJobById
       parameters:
       - name: id
         in: path
@@ -308,7 +308,7 @@ paths:
       tags:
       - Job Applications
       summary: List Applications For Job
-      operationId: jobsIdJob_applicationsGET
+      operationId: getApplicationsByJob
       parameters:
       - name: id
         in: path
@@ -329,7 +329,7 @@ paths:
       tags:
       - Job Applications
       summary: Create Job Application
-      operationId: jobsIdJob_applicationsPOST
+      operationId: createJobApplication
       parameters:
       - name: id
         in: path
@@ -358,7 +358,7 @@ paths:
       tags:
       - Job Applications
       summary: Modify Job Application
-      operationId: job_applicationsIdPUT
+      operationId: modifyJobApplication
       parameters:
       - name: id
         in: path
