# backend/nodejs-petsitter/controllers/Jobs.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Jobs = require('../service/JobsService');
 
-module.exports.jobsGET = function jobsGET (req, res, next) {
-  Jobs.jobsGET()
+module.exports.createJob = function createJob (req, res, next, body) {
+  Jobs.createJob(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -13,8 +13,8 @@ module.exports.jobsGET = function jobsGET (req, res, next) {
     });
 };
 
-module.exports.jobsIdDELETE = function jobsIdDELETE (req, res, next, id) {
-  Jobs.jobsIdDELETE(id)
+module.exports.deleteJobById = function deleteJobById (req, res, next, id) {
+  Jobs.deleteJobById(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -23,8 +23,28 @@ module.exports.jobsIdDELETE = function jobsIdDELETE (req, res, next, id) {
     });
 };
 
-module.exports.jobsIdGET = function jobsIdGET (req, res, next, id) {
-  Jobs.jobsIdGET(id)
+module.exports.getAllJobs = function getAllJobs (req, res, next) {
+  Jobs.getAllJobs()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getJobById = function getJobById (req, res, next, id) {
+  Jobs.getJobById(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getJobsForUser = function getJobsForUser (req, res, next, id) {
+  Jobs.getJobsForUser(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -35,26 +55,6 @@ module.exports.jobsIdGET = function jobsIdGET (req, res, next, id) {
 
 module.exports.jobsIdPUT = function jobsIdPUT (req, res, next, body, id) {
   Jobs.jobsIdPUT(body, id)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.jobsPOST = function jobsPOST (req, res, next, body) {
-  Jobs.jobsPOST(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.usersIdJobsGET = function usersIdJobsGET (req, res, next, id) {
-  Jobs.usersIdJobsGET(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
